@@ -1122,11 +1122,10 @@ pp_check.brmsfit <- function(object, type, nsamples, group = NULL,
       stop2("Argument 'x' is required for ppc type '", type, "'.")
     }
     ee <- extract_effects(formula(object), family = family(object))
-    ae_collapsed <- ulapply(get_all_effects(ee), 
-                            function(e) paste(e, collapse = ":"))
-    if (!x %in% ae_collapsed) {
+    ae_coll <- ulapply(get_all_effects(ee), paste, collapse = ":")
+    if (!x %in% ae_coll) {
       stop2("Variable '", x, "' is not a valid variable for this model. \n",
-            "Valid variables are: ", paste(ae_collapsed, collapse = ", "))
+            "Valid variables are: ", paste(ae_coll, collapse = ", "))
     }
   }
   if (type == "error_binned") {
@@ -1258,10 +1257,11 @@ marginal_effects.brmsfit <- function(x, effects = NULL, conditions = NULL,
   rsv_vars <- rsv_vars(x$family, nresp = length(ee$response),
                        rsv_intercept = attr(ee$fixed, "rsv_intercept"),
                        old_mv = attr(ee$formula, "old_mv"))
-  all_effects <- get_all_effects(ee, rsv_vars = rsv_vars)
-  ae_collapsed <- ulapply(all_effects, function(e) paste(e, collapse = ":"))
   if (is.null(effects)) {
-    effects <- all_effects
+    effects <- get_all_effects(ee, rsv_vars = rsv_vars)
+    if (!length(effects)) {
+      stop2("No valid effects detected.")
+    }
   } else {
     # allow to define interactions in any order
     effects <- strsplit(as.character(effects), split = ":")
@@ -1273,19 +1273,23 @@ marginal_effects.brmsfit <- function(x, effects = NULL, conditions = NULL,
       stop2("To display interactions of order higher than 2 ",
             "please use the 'conditions' argument.")
     }
+    all_effects <- get_all_effects(ee, rsv_vars = rsv_vars, comb_all = TRUE)
+    ae_coll <- all_effects[lengths(all_effects) == 1L]
+    ae_coll <- ulapply(ae_coll, paste, collapse = ":")
     matches <- match(lapply(all_effects, sort), lapply(effects, sort), 0L)
     if (sum(matches) > 0 && sum(matches > 0) < length(effects)) {
-      invalid <- effects[setdiff(1:length(effects), sort(matches))]  
-      invalid <- ulapply(invalid, function(e) paste(e, collapse = ":"))
+      invalid <- effects[setdiff(seq_along(effects), sort(matches))]  
+      invalid <- ulapply(invalid, paste, collapse = ":")
       warning2("Some specified effects are invalid for this model: ",
-               paste(invalid, collapse = ", "), "\nValid effects are: ", 
-               paste(ae_collapsed, collapse = ", "))
+               paste(invalid, collapse = ", "), "\nValid effects are ", 
+               "(combinations of): ", paste(ae_coll, collapse = ", "))
     }
     effects <- unique(effects[sort(matches)])
-  }
-  if (!length(unlist(effects))) {
-    stop2("All specified effects are invalid for this model.\n", 
-          "Valid effects are: ", paste(ae_collapsed, collapse = ", ")) 
+    if (!length(effects)) {
+      stop2("All specified effects are invalid for this model.\n", 
+            "Valid effects are (combinations of): ", 
+            paste(ae_coll, collapse = ", ")) 
+    }
   }
   if (length(probs) != 2L) {
     stop2("Arguments 'probs' must be of length 2.")
